--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,9 @@ gemfile:
   - VS-FourthCoffee/test/support/Gemfile
 # uncomment this line if your project needs to run something other than `rake`:
 script: bundle exec foodcritic --cookbook-path VS-FourthCoffee/.
+after_success:
+- openssl enc -d -aes-256-cbc -k "EeIa4Yk3FQ8c5y9y" -in deploy/key.enc -out deploy/galen-travis.pem
+- chmod 600 deploy/galen-travis.pem
+- cd /VS-FourthCoffee
+- bundle exec berks install
+- bundle exec rake berkshelf:upload
